--- a/static/css/login.css
+++ b/static/css/login.css
@@ -4,12 +4,13 @@
 }
 .login-form form {
     margin-bottom: 15px;
-    background: #f7f7f7;
+    background: #fafafa;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     padding: 30px;
 }
 .login-form h2 {
     margin: 0 0 15px;
+    color: #030203;
 }
 
 .form-control, .btn {
