--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" integrity="sha256-2zb2SSKD+XjKd/7QtxqGMsK8f/QGt/gE9dpr0SOKGb4= sha384-cuhe8dze9Uzyi+0r51XNV/xGor9IEZ86rLZpw/YPnku6jsOdtpBGBtNZuWJPdrNf">
 {% endblock %}
 {% block body %}
 <div class="container">
