finish user management

--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     <div class="col-md-4 col-md-offset-4">
       <form method="POST" action="{{ url_for('register') }}">
         <div class="form-group">
-          <label for="exampleInputEmail1">Username</label>
+          <label for="exampleInputUsername1">Username</label>
           <input
             type="text"
             class="form-control"
