refactor frontend too

--- a/templates/add-user-modal.html
+++ b/templates/add-user-modal.html
@@ -17,6 +17,7 @@
         id="addUserForm"
         data-url="/api/user"
         data-type="POST"
+        data-action="closeModal"
       >
         <div class="modal-body">
           <div class="form-group">
