--- a/templates/index.html
+++ b/templates/index.html
@@ -41,12 +41,12 @@
 </script>
 <script
   type="text/javascript"
-  src="{{ url_for('static', filename='js/form.js') }}"
-  integrity="sha384-tkhU8o+vHfobs5sspvSOjv/zH7F5u0aYDemGgboP7p4uVPJHsG54UWGw4+w3ShuO sha256-tkhU8o+vHfobs5sspvSOjv/zH7F5u0aYDemGgboP7p4uVPJHsG54UWGw4+w3ShuO"
+  src="{{ url_for('static', filename='js/modals.js') }}"
+  integrity="sha384-Fkz/8XDl5adqpC/eS+oXUYxllJigI17HNwrRT7hmhBFBl7DoJ0bh4ZHm7eoEkwN/ sha256-Fkz/8XDl5adqpC/eS+oXUYxllJigI17HNwrRT7hmhBFBl7DoJ0bh4ZHm7eoEkwN/"
 ></script>
 <script
   type="text/javascript"
   src="{{ url_for('static', filename='js/users.js') }}"
-  integrity="sha384-jdPMOjVFBT49wzZMn3fHZZP2kuENuIaUAooEjKesa+pih5T0tlud4xmd/udzBCCT sha256-jdPMOjVFBT49wzZMn3fHZZP2kuENuIaUAooEjKesa+pih5T0tlud4xmd/udzBCCT"
+  integrity="sha384-hsqxTk2/BTThrzW1v2pRT+3YkiG9DUQblvDsANndgHKHvaRONXkKDEihrjNHa9I7 sha256-hsqxTk2/BTThrzW1v2pRT+3YkiG9DUQblvDsANndgHKHvaRONXkKDEihrjNHa9I7"
 ></script>
 {% include "manage-users-modal.html" %} {% endblock %}
