--- a/templates/login.html
+++ b/templates/login.html
@@ -12,10 +12,10 @@
         {{ form.csrf_token }}
         <h2 class="text-center">{{ form.submit.label }}</h2>
         <div class="form-group">
-          {{ form.username(class_="form-control"+username_error) }}
+          {{ form.username(class_="form-control"+error) }}
         </div>
         <div class="form-group">
-          {{ form.password(class_="form-control"+password_error) }}
+          {{ form.password(class_="form-control"+error) }}
         </div>
         <div class="form-group">
           {{ form.submit(class_="btn btn-primary btn-block") }}
