--- a/cherrydoor/templates/login.html
+++ b/cherrydoor/templates/login.html
@@ -2,8 +2,7 @@
 <link
   rel="stylesheet"
   href="{{ url_for('static', filename='css/login.css') }}"
-  integrity="sha256-2zb2SSKD+XjKd/7QtxqGMsK8f/QGt/gE9dpr0SOKGb4= sha384-cuhe8dze9Uzyi+0r51XNV/xGor9IEZ86rLZpw/YPnku6jsOdtpBGBtNZuWJPdrNf"
-/>
+  integrity="sha384-cuhe8dze9Uzyi+0r51XNV/xGor9IEZ86rLZpw/YPnku6jsOdtpBGBtNZuWJPdrNf sha256-2zb2SSKD+XjKd/7QtxqGMsK8f/QGt/gE9dpr0SOKGb4="/>
 {% endblock %} {% block body %}
 <div class="container">
   <div class="row">
