--- a/cherrydoor/templates/layout.html
+++ b/cherrydoor/templates/layout.html
@@ -10,23 +10,22 @@
     <link
       rel="shortcut icon"
       href="{{ url_for('static', filename='images/logo/logo-48px.png') }}"
-      integrity="sha384-Yu3BXsb7ujtpi638uDTAHXPaRivIHQZo6kiz1QwwBWzGhryPETZUKe+5tpDB9Vpm"
-    />
+      integrity="sha384-0QUCCy0LtDJcjFKaKrfpswwbFMnGs7vNzE4/cQaHSZZNOpfHJ8Glf9URjmcDSRS0 sha256-+dnys4NKrgJpaidKYsrZiNA28xN/Ggqgt57fCLtKwIk="    />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
-      integrity="sha384-T8BvL2pDN59Kgod7e7p4kesUb+oyQPt3tFt8S+sIa0jUenn1byQ97GBKHUN8ZPk0"
+      integrity="sha384-T8BvL2pDN59Kgod7e7p4kesUb+oyQPt3tFt8S+sIa0jUenn1byQ97GBKHUN8ZPk0 sha256-rldnE7wZYJj3Q43t5v8fg1ojKRwyt0Wtfm+224CacZs="
       crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/sleek.min.css') }}"
-      integrity="sha384-93DPUTWqtlv58l3hlSdezmzaCIFL8ePFgNP2Sot5LX/Q6hUXxncCCHfFcOFo+deZ"
+      integrity="sha384-93DPUTWqtlv58l3hlSdezmzaCIFL8ePFgNP2Sot5LX/Q6hUXxncCCHfFcOFo+deZ sha256-JDgx+EB8kU9wI5htwmSK1URJP/U2VhLFP7Dkg09GpN8="
       crossorigin="anonymous"
     />
     <script
       src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"
-      integrity="sha384-K5PE7vslc1v8x816FiQ4Fy7FeC13biD40h9rg1Ipj5sOUG62eS2xqR/ty3j4ZXB8"
+      integrity="sha384-K5PE7vslc1v8x816FiQ4Fy7FeC13biD40h9rg1Ipj5sOUG62eS2xqR/ty3j4ZXB8 sha256-QSuP+cWrMrkBn82EvNSlTA4mWhRShHT07kWyeiCr6us="
       crossorigin="anonymous"
     ></script>
     <script
@@ -36,7 +35,7 @@
     ></script>
     <script
       src="{{ url_for('static', filename='js/socket.io.js') }}"
-      integrity="sha384-urGzJ3xfFgDcvacLzDZWnzEAY8JBSamfPbFn8Rbh3tKwvIx93JZ55/L0fWQ9ypV8"
+      integrity="sha384-/lyEfZRU3I19/4GFIW4xZjxqWI8U2JH0BYTJoAzXZv6nPFekk5NQkTcpuHQtiOqD sha256-p6DErpkHtOOVvK8tBxoTsGX2HtiCzwbEqye5Bm2R4PE="
       crossorigin="anonymous"
     ></script>
     {% block head %}{% endblock %}
