--- a/cherrydoor/templates/login.html
+++ b/cherrydoor/templates/login.html
@@ -2,6 +2,7 @@
 <link
   rel="stylesheet"
   href="{{ url_for('static', filename='css/login.css') }}"
+  integrity="sri_for('static', filename='css/login.css') "
   />
 {% endblock %} {% block body %}
 <div class="container">
