--- a/cherrydoor/static/css/login.css
+++ b/cherrydoor/static/css/login.css
@@ -1,23 +1,24 @@
 .login-form {
 	width: 340px;
-   	margin: 50px auto;
+	margin: 50px auto;
 }
 .login-form form {
-    margin-bottom: 15px;
-    background: #fafafa;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    padding: 30px;
+	margin-bottom: 15px;
+	background: #fafafa;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	padding: 30px;
 }
 .login-form h2 {
-    margin: 0 0 15px;
-    color: #030203;
+	margin: 0 0 15px;
+	color: #030203;
 }
 
-.form-control, .btn {
-    min-height: 38px;
-    border-radius: 2px;
+.form-control,
+.btn {
+	min-height: 38px;
+	border-radius: 2px;
 }
-.btn {        
-    font-size: 15px;
-    font-weight: bold;
+.btn {
+	font-size: 15px;
+	font-weight: bold;
 }
