--- a/cherrydoor/static/css/all.css
+++ b/cherrydoor/static/css/all.css
@@ -1,11 +1,45 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Poppins:wght@400;600;700&display=swap");
+* {
+	box-sizing: border-box;
+	font-family: "Nunito", sans-serif;
+}
+:root {
+	--primary: #de1444;
+	--primary-rgb: 222, 20, 68;
+	--gradient-end: #ff7e66;
+	--gradient-end-rgb: 255, 126, 102;
+	--secondary: #939393;
+	--secondary-rgb: 147, 147, 147;
+	--bg: #f5f5f5;
+	--layer: #ffffff;
+	--text: #363636;
+}
+
 body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	margin: 0;
+	background-color: var(--bg);
 }
-.page-contents {
+.app {
 	flex: 1;
+	background-color: var(--bg);
+}
+@media screen and (min-width: 600px) {
+	.app {
+		padding-left: 20vw;
+		padding-right: 20vw;
+	}
 }
 footer {
 	text-align: center;
+	background-color: var(--bg);
+}
+
+a {
+	text-decoration: none;
+	color: var(--primary);
+	font-weight: 600;
 }
