--- a/cherrydoor/static/css/index.css
+++ b/cherrydoor/static/css/index.css
@@ -1,37 +1,154 @@
-@font-face {
-	font-family: "Material Icons";
-	font-style: normal;
-	font-weight: 400;
-	src: url(/static/css/MaterialIcons-Regular.eot); /* For IE6-8 */
-	src: local("Material Icons"), local("MaterialIcons-Regular"),
-		url(/static/css/MaterialIcons-Regular.woff2) format("woff2"),
-		url(/static/css/MaterialIcons-Regular.woff) format("woff"),
-		url(/static/css/MaterialIcons-Regular.ttf) format("truetype");
-}
-.material-icons {
-	font-family: "Material Icons";
-	font-weight: normal;
-	font-style: normal;
-	font-size: 24px; /* Preferred icon size */
-	display: inline-block;
-	line-height: 1;
-	text-transform: none;
-	letter-spacing: normal;
-	word-wrap: normal;
-	white-space: nowrap;
-	direction: ltr;
+@charset "UTF-8";
+@media screen and (max-width: 600px) {
+	.menu-icon,
+	.menu-icon__line {
+		width: 30px;
+		cursor: pointer;
+		display: block;
+		pointer-events: all;
+	}
+	.menu-icon {
+		position: relative;
+		z-index: 2;
+		align-self: center;
+		width: 30px;
+		height: 30px;
+	}
+	.menu-icon:hover .menu-icon__line-left,
+	.menu-icon:hover .menu-icon__line-right {
+		width: 30px;
+	}
 
-	/* Support for all WebKit browsers. */
-	-webkit-font-smoothing: antialiased;
-	/* Support for Safari and Chrome. */
-	text-rendering: optimizeLegibility;
-
-	/* Support for Firefox. */
-	-moz-osx-font-smoothing: grayscale;
-
-	/* Support for IE. */
-	font-feature-settings: "liga";
-}
-.doorchart-container {
-	height: 75vh;
+	.menu-icon__line {
+		height: 2px;
+		background-color: var(--primary);
+		margin-bottom: 7px;
+		-webkit-transition: background-color 0.5s ease, -webkit-transform 0.2s ease;
+		transition: background-color 0.5s ease, -webkit-transform 0.2s ease;
+		transition: transform 0.2s ease, background-color 0.5s ease;
+		transition: transform 0.2s ease, background-color 0.5s ease,
+			-webkit-transform 0.2s ease;
+	}
+	.menu-icon__line-left,
+	.menu-icon__line-right {
+		width: 16.5px;
+		-webkit-transition: all 0.2s linear;
+		transition: all 0.2s linear;
+	}
+	.menu-icon__line_last {
+		margin-bottom: 0;
+	}
+	.menu-icon__line-right {
+		float: right;
+	}
+	.menu-icon.open .menu-icon__line-right {
+		transform: translate(-3px, -3.5px) rotate(45deg);
+		width: 15px;
+	}
+	.menu-icon.open .menu-icon__line-left {
+		transform: translate(2px, 4px) rotate(45deg);
+		width: 15px;
+	}
+	.menu-icon.open .menu-icon__line-center {
+		transform: translate(0) rotate(-45deg);
+	}
+	.nav-button {
+		position: fixed;
+		top: 2vh;
+		right: 2vw;
+		z-index: 2;
+	}
+	.navlink-container {
+		display: flex;
+		visibility: hidden;
+		flex-direction: column;
+		position: fixed;
+		top: 0;
+		padding-top: calc(1vh + 30px);
+		right: 0;
+		transition: visibility 1s ease-in;
+		background-color: rgba(0, 0, 0, 0);
+	}
+	.navlink-container.open {
+		visibility: visible;
+	}
+	.navlink-container::after,
+	.navlink-container::before {
+		content: "";
+		position: fixed;
+		top: 1vh;
+		right: 1vw;
+		width: 0;
+		height: 0;
+		background-color: rgba(20, 21, 26, 0.6);
+		border-bottom-left-radius: 200%;
+		z-index: -1;
+		transition-delay: 0;
+		-webkit-transition: border-radius 0.8s ease,
+			width 0.6s cubic-bezier(0.77, 0, 0.175, 1),
+			height 0.6s cubic-bezier(0.77, 0, 0.175, 1);
+		transition: border-radius 0.8s ease,
+			width 0.6s cubic-bezier(0.77, 0, 0.175, 1),
+			height 0.6s cubic-bezier(0.77, 0, 0.175, 1) visibility 0.5s;
+	}
+	.navlink-container::after {
+		transition-delay: 0.5s;
+		background-color: #fff;
+		background-position: bottom;
+		background-repeat: no-repeat;
+		background-size: 300%;
+		-webkit-transition-delay: 0s;
+		transition-delay: 0s;
+		box-shadow: 6px 7px 28px 0 rgba(16, 16, 16, 0.3);
+	}
+	.navlink-container.open::after,
+	.navlink-container.open::before {
+		width: min(300px, 100vw);
+		height: 12rem;
+		border-radius: 15px;
+	}
+	.navlink-container {
+		width: min(300px, 100vw);
+		height: 12rem;
+	}
+	.navlink {
+		float: left;
+		text-align: left;
+		font-size: 1.5rem;
+		line-height: 1.2;
+		letter-spacing: 2px;
+		margin-top: 7px;
+		margin-left: 0;
+		margin-bottom: 7px;
+		display: block;
+		opacity: 0;
+		transform: translate(30px);
+		transition: opacity 0.1s ease, transform 0.2s ease,
+			-webkit-transform 0.2s ease;
+	}
+	.navlink.open {
+		opacity: 1;
+		transform: translate(0);
+	}
+	.navlink.open:nth-child(1) {
+		transition-delay: 0.5s;
+	}
+	.navlink.open:nth-child(2) {
+		transition-delay: 0.6s;
+	}
+	.navlink.open:nth-child(3) {
+		transition-delay: 0.7s;
+	}
+	.navlink.open:nth-child(4) {
+		transition-delay: 0.8s;
+	}
+	.navlink.open:nth-child(5) {
+		transition-delay: 0.9s;
+	}
+	.navlink.open:nth-child(6) {
+		transition-delay: 1s;
+	}
+	.navlink.openmon:nth-child(7) {
+		transition-delay: 1.1s;
+	}
 }
