--- a/cherrydoor/static/css/login.css
+++ b/cherrydoor/static/css/login.css
@@ -1,4 +1,6 @@
-.login-form {
+@charset "UTF-8";
+@import "/static/css/inputs.css";
+/*.login-form {
 	width: 340px;
 	margin: 50px auto;
 }
@@ -21,4 +23,52 @@
 .btn {
 	font-size: 15px;
 	font-weight: bold;
+}*/
+body {
+	max-height: 100vh;
+}
+.app {
+	display: grid;
+	padding: 0;
+}
+.login-form {
+	width: min(max(600px, 30vw), 96vw);
+	max-width: 100vw;
+	align-self: center;
+	justify-self: center;
+	margin: 0;
+	padding: 4vh 2vw;
+	border-radius: 15px;
+	background-color: var(--layer);
+	display: grid;
+	gap: 4vh;
+	box-shadow: 0 0 1rem 0.75rem rgba(var(--secondary-rgb), 0.1);
+}
+
+.login-form > form {
+	display: grid;
+
+	justify-items: center;
+	align-items: center;
+
+	align-content: space-evenly;
+	gap: 2vh;
+	align-self: center;
+	justify-self: center;
+	margin: 0;
+}
+
+small {
+	font-size: xx-small;
+}
+.logo-container {
+	display: grid;
+}
+.logo {
+	height: 100%;
+	max-width: 350px;
+	min-width: 150px;
+	width: auto;
+	align-self: center;
+	justify-self: center;
 }
