closer to working front-end

--- a/cherrydoor/static/css/all.css
+++ b/cherrydoor/static/css/all.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Poppins:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Poppins:wght@400;600;700&Raleway:wght@600&display=swap");
 * {
 	box-sizing: border-box;
 	font-family: "Nunito", sans-serif;
@@ -26,12 +26,10 @@ body {
 .app {
 	flex: 1;
 	background-color: var(--bg);
-}
-@media screen and (min-width: 600px) {
-	.app {
-		padding-left: 20vw;
-		padding-right: 20vw;
-	}
+	margin: 0;
+	padding: 0;
+	max-width: 100vw;
+	width: 100%;
 }
 footer {
 	text-align: center;
