--- a/cherrydoor/static/css/index.css
+++ b/cherrydoor/static/css/index.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import "./inputs.css";
+@import "./v-shell.css";
 
 @keyframes show-fromleft {
 	0% {
@@ -40,7 +41,8 @@
 	-webkit-transition: background-color 0.5s ease, -webkit-transform 0.2s ease;
 	transition: background-color 0.5s ease, -webkit-transform 0.2s ease;
 	transition: transform 0.2s ease, background-color 0.5s ease;
-	transition: transform 0.2s ease, background-color 0.5s ease, -webkit-transform 0.2s ease;
+	transition: transform 0.2s ease, background-color 0.5s ease,
+		-webkit-transform 0.2s ease;
 }
 .menu-icon__line-left,
 .menu-icon__line-right {
@@ -97,9 +99,11 @@
 	border-bottom-left-radius: 200%;
 	z-index: -1;
 	transition-delay: 0;
-	-webkit-transition: border-radius 0.8s ease, width 0.6s cubic-bezier(0.77, 0, 0.175, 1),
+	-webkit-transition: border-radius 0.8s ease,
+		width 0.6s cubic-bezier(0.77, 0, 0.175, 1),
 		height 0.6s cubic-bezier(0.77, 0, 0.175, 1);
-	transition: border-radius 0.8s ease, width 0.6s cubic-bezier(0.77, 0, 0.175, 1),
+	transition: border-radius 0.8s ease,
+		width 0.6s cubic-bezier(0.77, 0, 0.175, 1),
 		height 0.6s cubic-bezier(0.77, 0, 0.175, 1) visibility 0.5s;
 }
 .navlink-container::after {
@@ -134,7 +138,8 @@
 	display: block;
 	opacity: 0;
 	transform: translate(30px);
-	transition: opacity 0.1s ease, transform 0.2s ease, -webkit-transform 0.2s ease;
+	transition: opacity 0.1s ease, transform 0.2s ease,
+		-webkit-transform 0.2s ease;
 }
 .navlink.open {
 	opacity: 1;
@@ -191,7 +196,9 @@ header {
 
 main {
 	display: grid;
-	grid-template-columns: calc(25vw - 1.5rem) calc(25vw - 1.5rem) calc(25vw - 1.5rem) calc(25vw - 1.5rem);
+	grid-template-columns: calc(25vw - 1.5rem) calc(25vw - 1.5rem) calc(
+			25vw - 1.5rem
+		) calc(25vw - 1.5rem);
 	grid-template-rows: repeat(auto-fill, calc(25vw - 1.5rem));
 	max-width: 100%;
 	max-height: 100%;
